--- a/lang/en.json
+++ b/lang/en.json
@@ -29,7 +29,7 @@
     "New Password": "New Password",
     "Confirm Password": "Confirm Password",
     "text--base": "text--base",
-    "Login": "Login",
+    "Login": "Next",
     "Reset Password": "Reset Password",
     "Welcome To": "Welcome To",
     "Admin Panel": "Admin Panel",
@@ -74,14 +74,14 @@
     "Update Extension": "Update Extension",
     "extension-name": "extension-name",
     "Rejejct KYC": "Rejejct KYC",
-    "Submit": "Submit",
+    "Submit": "Verify",
     "Send Email": "Send Email",
     "Close": "Close",
     "Send Test Mail": "Send Test Mail",
     "Global Setting for": "Global Setting for",
     "in bellow": "in bellow",
     "Amount Limit": "Amount Limit",
-    "Charge": "Charge",
+    "Charge": "Charges & Fees",
     "Rate": "Rate",
     "Total Supported Currency": "Total Supported Currency",
     "Collect Data": "Collect Data",
@@ -126,7 +126,7 @@
     "Clear All": "Clear All",
     "No new notification found!": "No new notification found!",
     "Admin Profile": "Admin Profile",
-    "Change Password": "Change Password",
+    "Change Password": "Change PIN",
     "menu-title": "menu-title",
     "Auth Section": "Auth Section",
     "Blog Category": "Blog Category",
@@ -187,8 +187,8 @@
     "Setup Currency": "Setup Currency",
     "User Analytics": "User Analytics",
     "View Users": "View Users",
-    "Escrow Details": "Escrow Details",
-    "Title": "Title",
+    "Escrow Details": "Order Details",
+    "Title": "Item/Order Title",
     "Role": "Role",
     "Enabled Currency": "Enabled Currency",
     "Supported Currency": "Supported Currency",
@@ -206,7 +206,7 @@
     "Total Price": "Total Price",
     "Charge Payer": "Charge Payer",
     "Status": "Status",
-    "Remarks": "Remarks",
+    "Remarks": "Notes",
     "Payment Details": "Payment Details",
     "Fees & Charge": "Fees & Charge",
     "Seller Amount": "Seller Amount",
@@ -221,7 +221,7 @@
     "Languages": "Languages",
     "Language Keywords of English": "Language Keywords of English",
     "Money Out Details": "Money Out Details",
-    "Add Money": "Add Money",
+    "Add Money": "Top-up Wallet",
     "Update Gateway": "Update Gateway",
     "Automatic Add Money": "Automatic Add Money",
     "Account Number": "Account Number",
@@ -229,7 +229,7 @@
     "gatewayImage": "gatewayImage",
     "Gateway Image": "Gateway Image",
     "Genarate Fields": "Genarate Fields",
-    "Money Out": "Money Out",
+    "Money Out": "Cash-out balance",
     "Automatic": "Automatic",
     "Bonus": "Bonus",
     "Clear Cache": "Clear Cache",
@@ -303,7 +303,7 @@
     "Username": "Username:",
     "Last Login:": "Last Login:",
     "Information of User": "Information of User",
-    "Phone Number": "Phone Number",
+    "Phone Number": "Mobile Number",
     "Add/Subtract Balance": "Add/Subtract Balance",
     "balance": "balance",
     "Type": "Type",
@@ -376,7 +376,7 @@
     "Send Code": "Send Code",
     "Password Reset": "Password Reset",
     "Reset your password": "Reset your password",
-    "OTP Verification": "OTP Verification",
+    "OTP Verification": "Verify your mobile number",
     "Please check your email address to get the OTP (One time password).": "Please check your email address to get the OTP (One time password).",
     "Verify": "Verify",
     "user.register": "user.register",
@@ -395,7 +395,7 @@
     "text-right": "text-right",
     "Attachment": "Attachment",
     "Wallet": "Wallet",
-    "My Escrow": "My Escrow",
+    "My Escrow": "PEACE Transactions",
     "Rejected": "Rejected",
     "Option": "Option",
     "Waiting": "Waiting",
@@ -444,7 +444,7 @@
     "las la-plus me-1": "las la-plus me-2",
     "Add New Ticket": "Add New Ticket",
     "Transactions": "Transactions",
-    "Total Escrow": "Total Escrow",
+    "Total Escrow": "Total Peace Transactions",
     "Completed Logs": "Completed Logs",
     "Canceled Logs": "Canceled Logs",
     "Add Money Logs": "Add Money Logs",
@@ -498,9 +498,9 @@
     ".buyerPay": ".buyerPay",
     "You Will Pay": "You Will Pay",
     "Completed": "Completed",
-    "Completed Escrow": "Completed Escrow",
-    "Pending Escrow": "Pending Escrow",
-    "Disputed Escrow": "Disputed Escrow",
+    "Completed Escrow": "Completed",
+    "Pending Escrow": "Pending",
+    "Disputed Escrow": "Disputed",
     "Transactions Log": "Transactions Log",
     "View More": "View More",
     "pagination.previous": "pagination.previous",
@@ -568,7 +568,7 @@
     "Get Support": "Get Support",
     "2FA Security": "2FA Security",
     "Escrow Id": "Escrow Id",
-    "Amount": "Amount",
+    "Amount": "Item/Order price",
     "My Wallet": "My Wallet",
     "Submit Escrow": "Submit Escrow",
     "Confirm & Send": "Confirm & Send",
@@ -582,7 +582,7 @@
     "First Name": "First Name",
     "Last Name": "Last Name",
     "Buyer": "Buyer",
-    "Seller": "Seller",
+    "Seller": "Merchant",
     "Enter Password": "Enter Password",
     "Don't Have An Account?": "Don't Have An Account?",
     "Enter Verification Code": "Enter Verification Code",
@@ -606,8 +606,8 @@
     "login Sub Title": "Our secure login process ensures the confidentiality of your information. Log in today and stay connected to your finances, anytime and anywhere.",
     "forgot Password Sub Title": "Take control of your account by resetting your password. Our password recovery page guides you through the necessary steps to securely reset your password.",
     "dont Have An Account": "Dont Have An Account? Click The Register Button.",
-    "resend": "Resend",
-    "otp Verification Sub Title": "We sent a 6-digit code to your email. Please check your mail inbox or spam.",
+    "resend": "Resend code",
+    "otp Verification Sub Title": "Enter 4-digit SMS verification code sent to your mobile",
     "reset Password Sub Title": "Now you are able to reset your password. Please reset your password and try again.",
     "old Password": "Old password",
     "reset Password Confirmation MSG": "Your password has been successfully reset, please try to login again.",
@@ -615,14 +615,14 @@
     "register Title": "Register for an Account Today",
     "register Sub Title": "Become a part of our community by registering for an account today. Enjoy a range of benefits and features tailored to meet your needs. Our registration page makes it easy to create your account, providing a seamless and user-friendly experience.",
     "i Have Agreed": "I have agreed with",
-    "kyc Form": "KYC Form",
+    "kyc Form": "Account Verification",
     "Slug": "Slug",
     "Exchange Charges": "Exchange Charges",
     "update KYC Form": "Update KYC Form",
     "Add New": "Add New",
     "Escrow Charges": "Escrow Charges",
-    "kyc Form Title": "Identify Verification",
-    "kyc Form Sub Title": "Please submit your government ID and identify yourself through this form. It is completely safe, we always take care of our users documents.",
+    "kyc Form Title": "Identity Verification",
+    "kyc Form Sub Title": "To keep your account secure and comply with regulations, please fill the form and upload a valid a government-issued ID. Your information is encrypted and kept private",
     "CRYPTO": "CRYPTO",
     "FIAT": "FIAT",
     "select Country": "Select Country",
@@ -632,7 +632,7 @@
     "back Part": "Back Part",
     "upload": "Upload",
     "kyc Form Confirmation MSG": "Your document has been submit successfully, Please wait for admin approval.",
-    "current Balance": "Current Balance",
+    "current Balance": "Wallet Balance",
     "notifications": "Notifications",
     "profile Info": "Profile Information",
     "escrow Log": "Escrow Log",
@@ -641,7 +641,7 @@
     "pending": "Pending",
     "verified": "Verified",
     "disputed": "Disputed",
-    "add New Escrow": "Add New Escrow",
+    "add New Escrow": "Create New PeaceLink",
     "enter Title": "Enter Title",
     "category": "Category",
     "log Out Content": "Are you sure you want to log out?",
@@ -799,7 +799,7 @@
     "t login to your account": "t login to your account",
     "Data fetch Successfully": "Data fetch Successfully",
     "Google 2FA Updated Successfully!": "Google 2FA Updated Successfully!",
-    "Your profile type updated successfully": "Your profile type updated successfully",
+    "Your profile type updated successfully": "Your role has been updated successfully",
     "user.password.forgot.code.verify.form": "user.password.forgot.code.verify.form",
     "Varification code sended to your email address": "Varification code sended to your email address",
     "Approve": "Approve",
@@ -853,7 +853,7 @@
     "These credentials do not match our records": "These credentials do not match our records",
     "System Maintenance": "System Maintenance",
 
-    "Delivery Fee Amount": "Delivery Fee Amount",
+    "Delivery Fee Amount": "Delivery Fee",
     "Advanced Payment Amount": "Advanced Payment Amount",
     "Return Fee Amount": "Return Fee Amount",
     "Delivery Timeframe (Days)": "Delivery Timeframe (Days)",
