--- a/lang/en.json
+++ b/lang/en.json
@@ -26,8 +26,8 @@
     "Username OR Email Address": "Username OR Email Address",
     "Send": "Send",
     "sub-title mt-0": "sub-title mt-1",
-    "New Password": "New Password",
-    "Confirm Password": "Confirm Password",
+    "New Password": "New PIN",
+    "Confirm Password": "Confirm PIN",
     "text--base": "text--base",
     "Login": "Next",
     "Reset Password": "Reset Password",
@@ -395,7 +395,7 @@
     "text-right": "text-right",
     "Attachment": "Attachment",
     "Wallet": "Wallet",
-    "My Escrow": "PEACE Transactions",
+    "My Escrow": "Peace Transactions",
     "Rejected": "Rejected",
     "Option": "Option",
     "Waiting": "Waiting",
@@ -443,7 +443,7 @@
     "Submit Ticket": "Submit Ticket",
     "las la-plus me-1": "las la-plus me-2",
     "Add New Ticket": "Add New Ticket",
-    "Transactions": "Transactions",
+    "Transactions": "Wallet Transactions",
     "Total Escrow": "Total Peace Transactions",
     "Completed Logs": "Completed Logs",
     "Canceled Logs": "Canceled Logs",
@@ -481,10 +481,10 @@
     "Buying": "Buying",
     "See Our Recent Blog": "See Our Recent Blog",
     "Your KYC information is verified": "Your KYC information is verified",
-    "I have agreed with": "I have agreed with",
+    "I have agreed with": "By  proceeding, you agree to our",
     "page.view": "page.view",
-    "terms-and-conditions": "terms-and-conditions",
-    "Terms Of Use": "Terms Of Use",
+    "terms-and-conditions": "terms and conditions",
+    "Terms Of Use": "Terms and Conditions",
     "Privacy Policy": "Privacy Policy",
     "Transaction ID": "Transaction ID",
     "Reject Reason": "Reject Reason",
@@ -501,7 +501,7 @@
     "Completed Escrow": "Completed",
     "Pending Escrow": "Pending",
     "Disputed Escrow": "Disputed",
-    "Transactions Log": "Transactions Log",
+    "Transactions Log": "Recent wallet Transactions",
     "View More": "View More",
     "pagination.previous": "pagination.previous",
     "pagination.next": "pagination.next",
@@ -609,7 +609,7 @@
     "resend": "Resend code",
     "otp Verification Sub Title": "Enter 4-digit SMS verification code sent to your mobile",
     "reset Password Sub Title": "Now you are able to reset your password. Please reset your password and try again.",
-    "old Password": "Old password",
+    "old Password": "Current PIN",
     "reset Password Confirmation MSG": "Your password has been successfully reset, please try to login again.",
     "register": "Register",
     "register Title": "Register for an Account Today",
@@ -635,7 +635,7 @@
     "current Balance": "Wallet Balance",
     "notifications": "Notifications",
     "profile Info": "Profile Information",
-    "escrow Log": "Escrow Log",
+    "escrow Log": "Peace transactions Log",
     "available Wallet": "Available Wallet",
     "accepted": "Accepted",
     "pending": "Pending",
@@ -678,7 +678,7 @@
     "fa Security": "2FA Security",
     "fa Verify": "2FA Verify",
     "delete Account": "Delete Account",
-    "add New Password": "Add New Password",
+    "add New Password": "Change your Security PIN",
     "change Password Confirmation MSG": "Your password has been successfully Changed, please try to login again.",
     "address": "Address",
     "zip": "Zip Code",
@@ -727,7 +727,7 @@
     "Please check email and verify your account": "Please check email and verify your account",
     "Something went worng! Please try again": "Something went worng! Please try again",
     "Registration successful": "Registration successful",
-    "Email varification code resend successfully": "Email varification code resend successfully",
+    "Email varification code resend successfully": "SMS verification has been resent",
     "Verification code does not match": "Verification code does not match",
     "Email successfully verified": "Email successfully verified",
     "KYC information successfully submitted": "KYC information successfully submitted",
@@ -868,3 +868,4 @@
     "No delivery timeframe required":"No delivery timeframe required",
     "Yes, include delivery timeframe":"Yes, include delivery timeframe"
 }
+
