--- a/lang/en.json
+++ b/lang/en.json
@@ -30,7 +30,7 @@
     "Confirm Password": "Confirm PIN",
     "text--base": "text--base",
     "Login": "Next",
-    "Reset Password": "Reset Password",
+    "Reset Password": "Reset PIN",
     "Welcome To": "Welcome To",
     "Admin Panel": "Admin Panel",
     "Email Address": "Email Address",
@@ -154,7 +154,7 @@
     "Email Notification": "Email Notification",
     "Force SSL": "Force SSL",
     "Agree Policy": "Agree Policy",
-    "Secure Password": "Secure Password",
+    "Secure Password": "Secure PIN",
     "User Registration": "User Registration",
     "Site Name": "Site Name",
     "Admin Care": "Admin Care",
@@ -241,7 +241,7 @@
     "Port": "Port",
     "Language File": "Language File",
     "Host": "Host",
-    "Password Change": "Password Change",
+    "Password Change": "PIN Change",
     "Save & Change": "Save & Change",
     "Country": "Country",
     "State": "State",
@@ -501,7 +501,7 @@
     "Completed Escrow": "Completed",
     "Pending Escrow": "Pending",
     "Disputed Escrow": "Disputed",
-    "Transactions Log": "Recent wallet Transactions",
+    "Transactions Log": "Recent Wallet Transactions",
     "View More": "View More",
     "pagination.previous": "pagination.previous",
     "pagination.next": "pagination.next",
@@ -591,7 +591,7 @@
     "App Version": "App Version",
     "please Fill Out The Field": "Please Fill Out The Field",
     "enter": "Enter",
-    "okay": "Okay",
+    "okay": "Return to Home",
     "congratulations": "Congratulations",
     "secure System": "Secure System",
     "welcome Onboard": "Welcome Onboard",
@@ -610,7 +610,7 @@
     "otp Verification Sub Title": "Enter 4-digit SMS verification code sent to your mobile",
     "reset Password Sub Title": "Now you are able to reset your password. Please reset your password and try again.",
     "old Password": "Current PIN",
-    "reset Password Confirmation MSG": "Your password has been successfully reset, please try to login again.",
+    "reset Password Confirmation MSG": "Your PIN has been successfully reset, please try to login again.",
     "register": "Register",
     "register Title": "Register for an Account Today",
     "register Sub Title": "Become a part of our community by registering for an account today. Enjoy a range of benefits and features tailored to meet your needs. Our registration page makes it easy to create your account, providing a seamless and user-friendly experience.",
@@ -618,7 +618,7 @@
     "kyc Form": "Account Verification",
     "Slug": "Slug",
     "Exchange Charges": "Exchange Charges",
-    "update KYC Form": "Update KYC Form",
+    "update KYC Form": "Account Verification",
     "Add New": "Add New",
     "Escrow Charges": "Escrow Charges",
     "kyc Form Title": "Identity Verification",
@@ -631,11 +631,11 @@
     "front Part": "Front Part",
     "back Part": "Back Part",
     "upload": "Upload",
-    "kyc Form Confirmation MSG": "Your document has been submit successfully, Please wait for admin approval.",
+    "kyc Form Confirmation MSG": "Your documents have been submitted successfully. Please wait while our team reviews them. You will receive a notification once your verification is approved. Thank you.",
     "current Balance": "Wallet Balance",
     "notifications": "Notifications",
     "profile Info": "Profile Information",
-    "escrow Log": "Peace transactions Log",
+    "escrow Log": "Peace Transactions Log",
     "available Wallet": "Available Wallet",
     "accepted": "Accepted",
     "pending": "Pending",
@@ -653,7 +653,7 @@
     "user Name Or Email": "Username/Email",
     "select Payment Method": "Select Payment Method",
     "will Pay": "Will Pay",
-    "preview": "Preview",
+    "preview": "Submission Successful",
     "Escrow Request": "Escrow Request",
     "total Amount": "Total Amount",
     "fees Charge": "Fees & Charge",
@@ -679,7 +679,7 @@
     "fa Verify": "2FA Verify",
     "delete Account": "Delete Account",
     "add New Password": "Change your Security PIN",
-    "change Password Confirmation MSG": "Your password has been successfully Changed, please try to login again.",
+    "change Password Confirmation MSG": "Your PIN has been successfully Changed, please try to login again.",
     "address": "Address",
     "zip": "Zip Code",
     "enable Two Fa": "Enable 2FA Security",
@@ -712,13 +712,13 @@
     "valid User": "Valid User",
     "invalid User": "Invalid User",
     "exchange MSG": "Cant exchange in same currency.",
-    "forgot Password": "Forgot Password?",
-    "forgot Password Ask": "Forgot Password?",
+    "forgot Password": "Forgot PIN?",
+    "forgot Password Ask": "Forgot PIN?",
     "Profile Settings": "Profile Settings",
     "Delete Profile": "Delete Profile",
     "User Profile": "User Profile",
     "Enter Username or Email": "Enter Username or Email",
-    "Current Password": "Current Password",
+    "Current Password": "Current PIN",
     "Login Successfull": "Login Successfull",
     "The credentials does not match": "The credentials does not match",
     "Account Has been Suspended": "Account Has been Suspended",
@@ -739,9 +739,9 @@
     "Verification otp code sended to your email": "Verification otp code sended to your email",
     "Session expired. Please try again": "Session expired. Please try again",
     "OTP verification successful": "OTP verification successful",
-    "Oops password does not match": "Oops password does not match",
+    "Oops password does not match": "Oops PIN does not match",
     "Invalid Request. Please try again": "Invalid Request. Please try again",
-    "Password reset success. Please login with new password": "Password reset success. Please login with new password",
+    "Password reset success. Please login with new password": "PIN reset success. Please login with new PIN",
     "Add Money Information": "Add Money Information",
     "Add Money Inserted Successfully": "Add Money Inserted Successfully",
     "Transaction Failed. Record didn\\": "Transaction Failed. Record didn\\",
@@ -791,8 +791,8 @@
     "Invalid request, it is not manual gateway request": "Invalid request, it is not manual gateway request",
     "Money out request send to admin successfully": "Money out request send to admin successfully",
     "Profile successfully updated!": "Profile successfully updated!",
-    "Current password didn\\": "Current password didn\\",
-    "Password updated successfully!": "Password updated successfully!",
+    "Current password didn\\": "Current PIN didn\\",
+    "Password updated successfully!": "PIN updated successfully!",
     "Something went wrong! Please try again": "Something went wrong! Please try again!",
     "User deleted successfull": "User deleted successfull",
     "Don": "Don",
@@ -800,12 +800,12 @@
     "Data fetch Successfully": "Data fetch Successfully",
     "Google 2FA Updated Successfully!": "Google 2FA Updated Successfully!",
     "Your profile type updated successfully": "Your role has been updated successfully",
-    "user.password.forgot.code.verify.form": "user.password.forgot.code.verify.form",
+    "user.password.forgot.code.verify.form": "user.PIN.forgot.code.verify.form",
     "Varification code sended to your email address": "Varification code sended to your email address",
     "Approve": "Approve",
     "Reject": "Reject",
-    "user.password.forgot": "user.password.forgot",
-    "Password Reset Token Expired": "Password Reset Token Expired",
+    "user.password.forgot": "user.PIN.forgot",
+    "Password Reset Token Expired": "PIN Reset Token Expired",
     "Varification code resend success!": "Varification code resend success!",
     "user.authorize.kyc": "user.authorize.kyc",
     "Please submit kyc information": "Please submit kyc information",
@@ -840,7 +840,7 @@
     "Escrow created successfully": "Escrow created successfully",
     "flutterWave": "flutterWave",
     "You have cancelled the payment": "You have cancelled the payment",
-    "Password successfully updated!": "Password successfully updated!",
+    "Password successfully updated!": "PIN successfully updated!",
     "Security Setting Updated Successfully!": "Security Setting Updated Successfully!",
     "Support ticket created successfully!": "Support ticket created successfully!",
     "This support ticket is closed": "This support ticket is closed",
@@ -868,4 +868,3 @@
     "No delivery timeframe required":"No delivery timeframe required",
     "Yes, include delivery timeframe":"Yes, include delivery timeframe"
 }
-
