--- a/lang/en.json
+++ b/lang/en.json
@@ -9,7 +9,7 @@
     "Back": "Back",
     "Buyer Username/Email": "Buyer Username/Email",
     "Payment Methods": "Payment Methods",
-    "Seller Username/Email": "Seller Username/Email",
+    "Seller Username/Email": "Merchant Username/Email",
     "Me": "Me",
     "Are you sure to logout?": "Are you sure to logout?",
     "Next": "Next",
@@ -209,7 +209,7 @@
     "Remarks": "Notes",
     "Payment Details": "Payment Details",
     "Fees & Charge": "Fees & Charge",
-    "Seller Amount": "Seller Amount",
+    "Seller Amount": "Merchant Amount",
     "Available balance": "Available balance",
     "Pay with": "Pay With",
     "Exchange Rate": "Exchange Rate",
@@ -491,7 +491,7 @@
     "Release Request": "Release Request",
     "Release Payment": "Release Payment",
     "Dispute Payment": "Dispute Payment",
-    "Seller Will Get": "Seller Will Get",
+    "Seller Will Get": "Merchant Will Get",
     "Buyer Will Pay": "Buyer Will Pay",
     ".sellerGet": ".sellerGet",
     "I Will Get": "I Will Get",
@@ -835,7 +835,7 @@
     "This escrow is closed": "This escrow is closed",
     "SMS Sending faild! Please try again": "SMS Sending faild! Please try again",
     "File Uploaded Success": "File Uploaded Success",
-    "Seller Wallet not found": "Seller Wallet not found",
+    "Seller Wallet not found": "Merchant Wallet not found",
     "You have successfully released payment": "You have successfully released payment",
     "Escrow created successfully": "Escrow created successfully",
     "flutterWave": "flutterWave",
