--- a/lang/ar.json
+++ b/lang/ar.json
@@ -29,7 +29,7 @@
    "New Password": "كلمة المرور الجديدة",
    "Confirm Password": "تأكيد كلمة المرور",
    "text--base": "النص الأساسي",
-   "Login": "تسجيل الدخول",
+   "Login": "التالي",
    "Reset Password": "إعادة تعيين كلمة المرور",
    "Welcome To": "مرحبًا بك في",
    "Admin Panel": "لوحة تحكم المسؤول",
@@ -590,7 +590,7 @@
    "Enter Confirm Password": "أدخل تأكيد كلمة المرور",
    "App Version": "إصدار التطبيق",
    "please Fill Out The Field": "يرجى ملء الحقل",
-   "enter": "يدخل",
+   "enter": "ادخل",
    "okay": "تمام",
    "congratulations": "تهانينا",
    "secure System": "نظام آمن",
@@ -614,7 +614,7 @@
    "register": "يسجل",
    "register Title": "سجل للحصول على حساب اليوم",
    "register Sub Title": "كن جزءًا من مجتمعنا من خلال التسجيل للحصول على حساب اليوم. استمتع بمجموعة من المزايا والميزات المصممة خصيصًا لتلبية احتياجاتك. تسهل صفحة التسجيل الخاصة بنا إنشاء حسابك، مما يوفر تجربة سلسة وسهلة الاستخدام.",
-   "i Have Agreed": "لقد اتفقت مع",
+   "i Have Agreed": "الضغط على التالي يعني موافقتك على",
    "kyc Form": "نموذج اعرف عميلك (KYC).",
    "Slug": "سبيكة",
    "Exchange Charges": "رسوم الصرف",
@@ -694,8 +694,8 @@
    "enter Amount": "أدخل المبلغ",
    "enter Pin": "حقل الرمز السري غير كافي",
    "from": "من",
-   "dismiss": "رفض",
-   "alert": "يُحذًِر",
+   "dismiss": "إخفاء",
+   "alert": "خطأ",
    "success Snack": "نجاح",
    "trx ID": "معرف TRX",
    "transaction Type": "نوع المعاملة",
