--- a/lang/en.json
+++ b/lang/en.json
@@ -9,7 +9,7 @@
     "Back": "Back",
     "Buyer Username/Email": "Buyer Username/Email",
     "Payment Methods": "Payment Methods",
-    "Seller Username/Email": "Merchant Username/Email",
+    "Seller Username/Email": "Seller Username/Email",
     "Me": "Me",
     "Are you sure to logout?": "Are you sure to logout?",
     "Next": "Next",
@@ -34,7 +34,7 @@
     "Welcome To": "Welcome To",
     "Admin Panel": "Admin Panel",
     "Email Address": "Email Address",
-    "No data found!": "No data found!",
+    "No data found!": "No transactions yet",
     "Transactions & Logs": "Transactions & Logs",
     "Default": "Default",
     "Sender": "Sender",
@@ -209,7 +209,7 @@
     "Remarks": "Notes",
     "Payment Details": "Payment Details",
     "Fees & Charge": "Fees & Charge",
-    "Seller Amount": "Merchant Amount",
+    "Seller Amount": "Seller Amount",
     "Available balance": "Available balance",
     "Pay with": "Pay With",
     "Exchange Rate": "Exchange Rate",
@@ -481,7 +481,7 @@
     "Buying": "Buying",
     "See Our Recent Blog": "See Our Recent Blog",
     "Your KYC information is verified": "Your KYC information is verified",
-    "I have agreed with": "By  proceeding, you agree to our",
+    "I have agreed with": "By proceeding, you agree to our",
     "page.view": "page.view",
     "terms-and-conditions": "terms and conditions",
     "Terms Of Use": "Terms and Conditions",
@@ -491,7 +491,7 @@
     "Release Request": "Release Request",
     "Release Payment": "Release Payment",
     "Dispute Payment": "Dispute Payment",
-    "Seller Will Get": "Merchant Will Get",
+    "Seller Will Get": "Seller Will Get",
     "Buyer Will Pay": "Buyer Will Pay",
     ".sellerGet": ".sellerGet",
     "I Will Get": "I Will Get",
@@ -579,7 +579,7 @@
     "Money Exchange Log": "Money Exchange Log",
     "Name": "Name",
     "Login Now": "Login Now",
-    "First Name": "First Name",
+    "First Name": "Name",
     "Last Name": "Last Name",
     "Buyer": "Buyer",
     "Seller": "Merchant",
@@ -589,7 +589,7 @@
     "Enter New Password": "Enter New Password",
     "Enter Confirm Password": "Enter Confirm Password",
     "App Version": "App Version",
-    "please Fill Out The Field": "Please Fill Out The Field",
+    "please Fill Out The Field": "Please fill out this field",
     "enter": "Enter",
     "okay": "Return to Home",
     "congratulations": "Congratulations",
@@ -614,7 +614,7 @@
     "register": "Register",
     "register Title": "Register for an Account Today",
     "register Sub Title": "Become a part of our community by registering for an account today. Enjoy a range of benefits and features tailored to meet your needs. Our registration page makes it easy to create your account, providing a seamless and user-friendly experience.",
-    "i Have Agreed": "I have agreed with",
+    "i Have Agreed": "By proceeding, you agree to our",
     "kyc Form": "Account Verification",
     "Slug": "Slug",
     "Exchange Charges": "Exchange Charges",
@@ -622,7 +622,7 @@
     "Add New": "Add New",
     "Escrow Charges": "Escrow Charges",
     "kyc Form Title": "Identity Verification",
-    "kyc Form Sub Title": "To keep your account secure and comply with regulations, please fill the form and upload a valid a government-issued ID. Your information is encrypted and kept private",
+    "kyc Form Sub Title": "To keep your account secure and comply with regulations, please fill the form and upload a valid a government-issued ID. Your information is encrypted and kept private. To ensure your ID is processed quickly and securely, please make sure the image you upload is clear and easy to read.",
     "CRYPTO": "CRYPTO",
     "FIAT": "FIAT",
     "select Country": "Select Country",
@@ -632,10 +632,10 @@
     "back Part": "Back Part",
     "upload": "Upload",
     "kyc Form Confirmation MSG": "Your documents have been submitted successfully. Please wait while our team reviews them. You will receive a notification once your verification is approved. Thank you.",
-    "current Balance": "Wallet Balance",
+    "current Balance": "My Wallet",
     "notifications": "Notifications",
     "profile Info": "Profile Information",
-    "escrow Log": "Peace Transactions Log",
+    "escrow Log": "Peace Transactions",
     "available Wallet": "Available Wallet",
     "accepted": "Accepted",
     "pending": "Pending",
@@ -673,7 +673,7 @@
     "exchange Currency": "Exchange Currency",
     "exchange Amount": "Exchange Amount",
     "exchange Confirmation MSG": "Your money has been exchange successfully, Thanks for using Escroc.",
-    "recent Transactions": "Recent Transactions",
+    "recent Transactions": "Recent Wallet Transactions",
     "update Profile": "Update Profile",
     "fa Security": "2FA Security",
     "fa Verify": "2FA Verify",
@@ -692,7 +692,7 @@
     "dispute": "Dispute",
     "request Payment": "Request Payment",
     "enter Amount": "Enter Amount",
-    "enter Pin": "Insufficient Pin Code Field",
+    "enter Pin": "Please enter the 4-digits SMS verification code to continue",
     "from": "From",
     "dismiss": "Dismiss",
     "alert": "Alert",
@@ -835,7 +835,7 @@
     "This escrow is closed": "This escrow is closed",
     "SMS Sending faild! Please try again": "SMS Sending faild! Please try again",
     "File Uploaded Success": "File Uploaded Success",
-    "Seller Wallet not found": "Merchant Wallet not found",
+    "Seller Wallet not found": "Seller Wallet not found",
     "You have successfully released payment": "You have successfully released payment",
     "Escrow created successfully": "Escrow created successfully",
     "flutterWave": "flutterWave",
@@ -868,3 +868,4 @@
     "No delivery timeframe required":"No delivery timeframe required",
     "Yes, include delivery timeframe":"Yes, include delivery timeframe"
 }
+
