--- a/lang/en.json
+++ b/lang/en.json
@@ -229,7 +229,7 @@
     "gatewayImage": "gatewayImage",
     "Gateway Image": "Gateway Image",
     "Genarate Fields": "Genarate Fields",
-    "Money Out": "Cash-out balance",
+    "Money Out": "Cash-out Balance",
     "Automatic": "Automatic",
     "Bonus": "Bonus",
     "Clear Cache": "Clear Cache",
@@ -395,7 +395,7 @@
     "text-right": "text-right",
     "Attachment": "Attachment",
     "Wallet": "Wallet",
-    "My Escrow": "Peace Transactions",
+    "My Escrow": "My Transactions",
     "Rejected": "Rejected",
     "Option": "Option",
     "Waiting": "Waiting",
@@ -481,10 +481,10 @@
     "Buying": "Buying",
     "See Our Recent Blog": "See Our Recent Blog",
     "Your KYC information is verified": "Your KYC information is verified",
-    "I have agreed with": "By proceeding, you agree to our",
+    "I have agreed with": "By proceeding, you agree to our ",
     "page.view": "page.view",
     "terms-and-conditions": "terms and conditions",
-    "Terms Of Use": "Terms and Conditions",
+    "Terms Of Use": "T&C",
     "Privacy Policy": "Privacy Policy",
     "Transaction ID": "Transaction ID",
     "Reject Reason": "Reject Reason",
@@ -608,7 +608,7 @@
     "dont Have An Account": "Dont Have An Account? Click The Register Button.",
     "resend": "Resend code",
     "otp Verification Sub Title": "Enter 4-digit SMS verification code sent to your mobile",
-    "reset Password Sub Title": "Now you are able to reset your password. Please reset your password and try again.",
+    "reset Password Sub Title": "Now you are able to reset your PIN. Please reset your PIN and try again.",
     "old Password": "Current PIN",
     "reset Password Confirmation MSG": "Your PIN has been successfully reset, please try to login again.",
     "register": "Register",
@@ -641,7 +641,7 @@
     "pending": "Pending",
     "verified": "Verified",
     "disputed": "Disputed",
-    "add New Escrow": "Create New PeaceLink",
+    "add New Escrow": "Create PeaceLink",
     "enter Title": "Enter Title",
     "category": "Category",
     "log Out Content": "Are you sure you want to log out?",
@@ -721,7 +721,7 @@
     "Current Password": "Current PIN",
     "Login Successfull": "Login Successfull",
     "The credentials does not match": "The credentials does not match",
-    "Account Has been Suspended": "Account Has been Suspended",
+    "Account Has been Suspended": "Account Has been Suspended, Kindly contact us for support",
     "Hold": "Hold",
     "success": "Success",
     "Please check email and verify your account": "Please check email and verify your account",
@@ -799,7 +799,7 @@
     "t login to your account": "t login to your account",
     "Data fetch Successfully": "Data fetch Successfully",
     "Google 2FA Updated Successfully!": "Google 2FA Updated Successfully!",
-    "Your profile type updated successfully": "Your role has been updated successfully",
+    "Your profile type updated successfully": "Your role has been switched successfully",
     "user.password.forgot.code.verify.form": "user.PIN.forgot.code.verify.form",
     "Varification code sended to your email address": "Varification code sended to your email address",
     "Approve": "Approve",
